# film_hub

./: .gitignore  docker-compose.yml
back/: .pre-commit-config.yaml  main.py  models.py  pyproject.toml
back/alembic/: env.py
back/alembic/versions/: 00b9f2b29d21_add_user_model.py  07d42c3f7ef2_add_project_structures.py
back/config/: db.py  settings.py
back/src/auth/: models.py  router.py
back/src/models/: __init__.py  project_models.py  rate_models.py  user_models.py
back/utils/: db_mixins.py
