[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["Toloknov Igor <toloknov.igor123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.5"
fastapi = {extras = ["standard"], version = "^0.115.5"}
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
