[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["Toloknov Igor <toloknov.igor123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.5"
fastapi = {extras = ["standard"], version = "^0.115.5"}
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
mypy = "^1.13.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"

files = "./src"

ignore_missing_imports = true


disallow_untyped_calls = true
disallow_untyped_defs = true
strict = true
